# automl

./: .gitignore  Machine_Learning_Text.txt  README.md  STEPS_AND_PERSISTENCE.md  TEST_RESULTS.md  app.py  check_ollama.py  preprocessing.py  pyproject.toml  requirements.txt  test_all_features.py  test_both_versions.py  test_focused.py  test_full_pipeline.py  test_real_datasets.py  test_simple.py  test_v2_e2e.py
data/: test_dataset.csv  test_experiments_v2.db  test_focused.csv  test_full_pipeline.csv  test_simple.csv
data/fine_tuning/: code_fixer_interactions.jsonl  code_generation_interactions.jsonl  comparator_interactions.jsonl  eda_interactions.jsonl  intent_interactions.jsonl  model_v2_interactions.jsonl  profiler_interactions.jsonl  strategy_interactions.jsonl  strategy_v2_interactions.jsonl  unknown_interactions.jsonl
docs/: automl-agent-learnings.md  fully-dynamic-version-summary.md  ml-pdf-integration.md
src/: orchestrator_v2.py
src/agents/: __init__.py  comparator_agent.py  eda_agent.py  intent_agent.py  orchestrator.py  profiler_agent.py  strategy_agent.py  trainer_agent.py
src/agents_v2/: __init__.py  code_fixer_agent.py  code_generation_agent.py  model_agent_v2.py  strategy_agent_v2.py
src/contracts/: __init__.py  comparison_schema.json  intent_schema.json  models.py  profile_schema.json  strategy_schema.json  training_schema.json
src/engine/: __init__.py  executor.py
src/engine_v2/: __init__.py  code_validator.py  dynamic_executor.py  sandbox.py
src/fine_tuning/: __init__.py  data_collector.py  dataset_preparer.py  trainer.py
src/llm/: __init__.py  llm_interface.py  ollama_provider.py
src/project_generator/: __init__.py  code_generator.py  documentation.py  generator.py  structure.py
src/utils/: __init__.py  data_loader.py  fine_tuning_logger.py
src/version_store/: __init__.py  query.py  store.py
src/visualization/: __init__.py  plot_generator.py
tests/: __init__.py
tests/integration/: test_agents.py  (+1 more)
ui/: app.py
(+48 files in other folders)
